HOMEPAGE GRID WRAPPING FIXED

--- a/react-app/src/components/PinGrid/PinGrid.css
+++ b/react-app/src/components/PinGrid/PinGrid.css
@@ -1,9 +1,10 @@
 #pinGrid {
+   padding-top: 50px;
     column-count: 7;
     column-gap: 5px;
     width: 100%;
     height: 100%;
-
+    padding-bottom: 500px;
 }
 
 #pinCard {
@@ -14,9 +15,8 @@
     cursor: zoom-in;
     margin: 0 auto;
     width: 236px;
-    height: 100%;
-    margin-bottom: 10px; 
     position: relative;
+    -webkit-column-break-inside: avoid;
 }
 
 #cardImg {
@@ -31,6 +31,7 @@
     cursor: zoom-in;
     border-radius: 16px;
     object-fit: cover;
+    position: relative
   }
 
 
@@ -41,6 +42,7 @@
   margin: 5px;
   padding: 2px;
   font-weight: 700;
+
 }
 
 #pinHeader {
@@ -51,8 +53,6 @@
   align-items: center;
   padding: 5px;
   font-weight: 700;
-  position: absolute;
-  top:0;
 }
 
 #pinLeftHeader {
